--- a/Perfo 1.html
+++ b/Perfo 1.html
@@ -22,7 +22,7 @@
 	</body>
 	
 	<footer>
-	<div><a href="acceuil.html">Historical And Program</a> SHOW 1 <a href="perfo 2.html"> SHOW 2 </a><a href="perfo 3.html"> SHOW 3 </a><a href="calendrier.html"> Calendar </a><a href="Info et demande.html"> Info. and appli.</a></div>
+	<div><a href="index.html">Historical And Program</a> SHOW 1 <a href="perfo 2.html"> SHOW 2 </a><a href="perfo 3.html"> SHOW 3 </a><a href="calendrier.html"> Calendar </a><a href="Info et demande.html"> Info. and appli.</a></div>
 	</footer>
 	
 </html>
