--- a/Perfo 2.html
+++ b/Perfo 2.html
@@ -21,7 +21,7 @@
 	</body>
 	
 	<footer>
-	<div><a href="acceuil.html">Historical And Program</a><a href="perfo 1.html"> SHOW 1 </a> SHOW 2 <a href="perfo 3.html"> SHOW 3 </a><a href="calendrier.html"> Calendar </a><a href="Info et demande.html"> Info. and appli.</a></div>
+	<div><a href="index.html">Historical And Program</a><a href="perfo 1.html"> SHOW 1 </a> SHOW 2 <a href="perfo 3.html"> SHOW 3 </a><a href="calendrier.html"> Calendar </a><a href="Info et demande.html"> Info. and appli.</a></div>
 	</footer>
 	
 </html>
