--- a/Perfo 3.html
+++ b/Perfo 3.html
@@ -21,7 +21,7 @@
 	</body>
 	
 	<footer>
-	<div><a href="acceuil.html"> Historical And Program </a><a href="perfo 1.html"> SHOW 1 </a><a href="perfo 2.html"> SHOW 2 </a> SHOW 3 <a href="calendrier.html"> Calendar </a><a href="Info et demande.html"> Info. and appli.</a></div>
+	<div><a href="index.html"> Historical And Program </a><a href="perfo 1.html"> SHOW 1 </a><a href="perfo 2.html"> SHOW 2 </a> SHOW 3 <a href="calendrier.html"> Calendar </a><a href="Info et demande.html"> Info. and appli.</a></div>
 	</footer>
 	
 </html>
