--- a/calendrier.html
+++ b/calendrier.html
@@ -66,7 +66,7 @@
 	</body>
 	
 	<footer>
-	<div><a href="acceuil.html"> Historical And Program </a><a href="perfo 1.html"> SHOW 1 </a><a href="perfo 2.html"> SHOW 2 </a><a href="perfo 3.html"> SHOW 3 </a> Calendar <a href="info et demande.html">Info. and appli.</a></div>
+	<div><a href="index.html"> Historical And Program </a><a href="perfo 1.html"> SHOW 1 </a><a href="perfo 2.html"> SHOW 2 </a><a href="perfo 3.html"> SHOW 3 </a> Calendar <a href="info et demande.html">Info. and appli.</a></div>
 	</footer>
 	
 </html>
