Update Info et demande.html
change en index

--- a/Info et demande.html
+++ b/Info et demande.html
@@ -33,7 +33,7 @@
 	</body>
 	
 	<footer>
-	<div><a href="acceuil.html"> Historical And Program </a><a href="perfo 1.html"> SHOW 1 </a><a href="perfo 2.html"> SHOW 2 </a><a href="perfo 3.html"> SHOW 3 </a><a href="calendrier.html"> Calendar </a> Info. and appli.</div>
+	<div><a href="index.html"> Historical And Program </a><a href="perfo 1.html"> SHOW 1 </a><a href="perfo 2.html"> SHOW 2 </a><a href="perfo 3.html"> SHOW 3 </a><a href="calendrier.html"> Calendar </a> Info. and appli.</div>
 	</footer>
 	
 </html>
